--- a/wp-content/themes/mcstain-2019/assets/scss/main.scss
+++ b/wp-content/themes/mcstain-2019/assets/scss/main.scss
@@ -48,7 +48,7 @@
 }
 .manifesto-slider { float: left;
   #manifesto-slider {
-    .carousel-indicators { margin-bottom: 0; bottom: 7px;
+    .carousel-indicators { margin-bottom: 0; bottom: 15px;
       li { width: 10px; height: 10px; border-radius: 100%; }
     }
   }
@@ -779,12 +779,12 @@ No media query...Bootstrap default
 @media (min-width: 1599px){
   /*** MANIFESTO PAGE ***/
   .manifesto-slides { clear: both; width: 100%;
-    #manifesto-tabs {
+    #manifesto-tabs { max-width: 1600px; margin: 0 auto;
       .nav-item {
         .nav-link { font-size: 0.95em; line-height: 1.2em; }
       }
     }
-    #manifesto-tabcontent {
+    #manifesto-tabcontent { max-width: 1600px; margin: 0 auto;
       .tab-pane {
         .tab-container { position: relative;
           .tab-contents { position: absolute; top: 20px; left: 1000px; width: 560px;
@@ -792,7 +792,7 @@ No media query...Bootstrap default
               strong { font-family: 'uni-bold', sans-serif; }
             }
           }
-          .right-btn { right: 0; bottom: 0; }
+          .right-btn { right: 0; bottom: 0; width: 240px; height: 240px; }
         }
       }
     }
